# hass-maxxfan-zigbee-ir

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml  validate.yml
custom_components/maxxfan/: __init__.py  const.py  manifest.json
custom_components/maxxfan/protocol/: __init__.py  maxxfan.py  states.py  tuya_ir.py
tests/: conftest.py  test_build_tuya_code.py  test_maxxfan.py  test_states.py  test_tuya_ir.py
